--- a/Class1/index.html
+++ b/Class1/index.html
@@ -8,8 +8,13 @@
 </head>
 <body>
     <h1>React in Html</h1>
+
+    <!-- Agregamos la etiqueta -->
     <div id="button_container"></div>
 
+    <!-- Cargar React. -->
+    <!-- Nota: En producción, debemos reemplazar "development.js" con
+    "production.min.js". -->
     <script
         src="https://unpkg.com/react@18/umd/react.development.js"
         crossorigin>
@@ -18,6 +23,7 @@
         src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
         crossorigin>
     </script>
+
     <!-- Cargamos nuestro componente de React. -->
     <script src="button.js"></script>
 </body>
